support .tasproj files, as long as they do not contain greenzone, check .bk2 for greenzone and other tasproj related entries

--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -26,6 +26,7 @@
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-InvalidCycleCount.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-NegativeCycleCount.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\Gambatte-NoCycleCount.bk2" />
+		<EmbeddedResource Include="Bk2SampleFiles\greenzone.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\MissingHeader.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\MissingInputLog.bk2" />
 		<EmbeddedResource Include="Bk2SampleFiles\NoFileExts.bk2" />
