add a wiki helper bar with some common formatting and module markup, resolves #1381

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -228,5 +228,8 @@
 		<Content Update="Pages\Users\Ratings.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
+		<Content Update="Pages\Wiki\_WikiEditHelper.cshtml">
+		  <Pack>$(IncludeRazorContentInPack)</Pack>
+		</Content>
 	</ItemGroup>
 </Project>
