Fix tasproj parsing if a branch is present Add basic parsing test for a tasproj containing a branch Fix building WikiEngine tests locally

--- a/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
+++ b/tests/TASVideos.MovieParsers.Tests/TASVideos.MovieParsers.Tests.csproj
@@ -169,6 +169,7 @@
 		<EmbeddedResource Include="OmrSampleFiles\pal.omr" />
 		<EmbeddedResource Include="OmrSampleFiles\savestate.omr" />
 		<EmbeddedResource Include="OmrSampleFiles\svi.omr" />
+		<EmbeddedResource Include="TasprojSampleFiles\branch.tasproj" />
 		<EmbeddedResource Include="VbmSampleFiles\2frames.vbm" />
 		<EmbeddedResource Include="VbmSampleFiles\gb.vbm" />
 		<EmbeddedResource Include="VbmSampleFiles\gbc.vbm" />
