Add wiki helper bar to Sumissions Submit/Edit/Publish pages, and Publications/Edit page, fixes #1387

--- a/TASVideos/TASVideos.csproj
+++ b/TASVideos/TASVideos.csproj
@@ -228,7 +228,7 @@
 		<Content Update="Pages\Users\Ratings.cshtml">
 			<Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
-		<Content Update="Pages\Wiki\_WikiEditHelper.cshtml">
+		<Content Update="Pages\Shared\_WikiEditHelper.cshtml">
 		  <Pack>$(IncludeRazorContentInPack)</Pack>
 		</Content>
 	</ItemGroup>
